--- a/lab_04.html
+++ b/lab_04.html
@@ -41,6 +41,9 @@
   <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
   <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
   <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Quiz 01</a></li>
+  <li id="lab_8_link"><a href="lab_08.html">Homework Assignment 02</a></li>
 
           </ol>
         </nav>
