--- a/lab_05.html
+++ b/lab_05.html
@@ -41,6 +41,9 @@
   <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
   <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
   <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Quiz 01</a></li>
+  <li id="lab_8_link"><a href="lab_08.html">Homework Assignment 02</a></li>
 
           </ol>
         </nav>
@@ -66,8 +69,10 @@
       Previous
     </a>
   
-  
-    <span></span
+      <a href="lab_06.html">
+      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
+      Next
+    </a>
   </nav>
 
       </div>
