--- a/lab_06.html
+++ b/lab_06.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
-    <meta name="description" content="A guided tour that walks through the fundamentals of Git">
+    <meta name="description" content="A guided tour that walks through file i/o, if statements, and for loops">
     <meta name="theme-color" content="#0000ff">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" media="screen" href="reset.css">
@@ -36,28 +36,119 @@
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">Project</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">If statement</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">Iterating</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">File I/O</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">Quiz 01</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Homework Assignment 01</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">If statement</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">Iterating</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Quiz 01</a></li>
+  <li id="lab_8_link"><a href="lab_08.html">Homework Assignment 02</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 6</em>  Homework Assignment 01</h1>
-<p>1. Open up <code>ha_00_controlflow101.ipynb</code> and finish by next class</p>
+        <h1 class="lab_title"><em>lab 6</em>  Functions</h1>
+<h2>Goals</h2>
+<ul>
+	<li>To understand the anatomy of a function</li>
+	<li>To understand the intuition for creating functions</li>
+</ul>
+<h2>Code can get long and repetitive!</h2>
+<p>Here&#8217;s a function that prints out a greeting and a name</p>
+<h3 class="file-heading"><em>no_function.py</em></h3>
+<pre class="file">names = ['Tim', 'Bea', 'Queenie']
+
+for name in names:
+  if name == 'Tim':
+    print('Hello Tim')
+  elif name == 'Bea':
+    print('Hello Bea')
+  elif name == 'Queenie':
+    print('Hello Queenie')
+  else:
+    print('Hello')
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python no_function.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python no_function.py</div>
+<p>Hello Tim<br />
+Hello Bea<br />
+Hello Queenie<br />
+</pre></p>
+<p>Imagine if you had to do this for 10000 names. Think about how long and repetitive this code will be!</p>
+<h2>Functions</h2>
+<p>Functions are a set of instructions that you may want to call repeatedly, or perhaps because of their complexity, you want to hide.</p>
+<p>Each function carries out a specific task. For example</p>
+<h3 class="file-heading"><em>with_function.py</em></h3>
+<pre class="file">names = ['Tim', 'Bea', 'Queenie']
+
+def say_hello(name):
+  print('Hello {}'.format(name))
+
+
+for name in names:
+  say_hello(name)
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python with_function.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python with_function.py</div>
+<p>Hello Tim<br />
+Hello Bea<br />
+Hello Queenie<br />
+</pre></p>
+<h2>The return statement</h2>
+<p>Add return statements in order to return a value, which can then be stored in a variable</p>
+<h3 class="file-heading"><em>with_function_return.py</em></h3>
+<pre class="file">names = ['Tim', 'Bea', 'Queenie']
+
+def say_hello(name):
+  return 'Hello {}'.format(name)
+
+
+for name in names:
+  # Since a value is returned from this function, we can store it in a variable
+  greeting = say_hello(name)
+
+  # Now we can print that variable value
+  print(greeting)
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python with_function_return.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python with_function_return.py</div>
+<p>Hello Tim<br />
+Hello Bea<br />
+Hello Queenie<br />
+</pre></p>
+<h2>Parameters</h2>
+<h3>Definition: function signature is the first line of a function</h3>
+<p>You will notice that in the &#8216;function signature&#8217; there is a set of parentheses that may or may not have a variable name in it.</p>
+<p>This is called a parameter. Think of it as a placeholder for what you will pass in. Let&#8217;s take a look at an example function that has a parameter:</p>
+<p><img src="parameters.png" style="max-width: 750px"></png></p>
+<h2>Coding exercises</h2>
+<p>1. Open a new kernel within sandbox on jupyter notebook to debug your code. Call it functions. Number and answer the questions within your notebook.</p>
+<p>2. Create a function called <code>add</code> that will add two numbers together</p>
+<p>3. Create a function called <code>just_hello</code> that will only say hello. Will this need a paramter or not?</p>
+<p>4. Create a function called <code>celsius_to_farenheit</code> that will convert celsius to farenheit</p>
+<p>5. You have a list of good words and bad words. Create a function called <code>write_list_to_files</code> that will add a list of words to a file</p>
         <nav class="foot-navigation">
       <a href="lab_05.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
       Previous
     </a>
   
-  
-    <span></span
+      <a href="lab_07.html">
+      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
+      Next
+    </a>
   </nav>
 
       </div>
