--- a/lab_07.html
+++ b/lab_07.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 1 - Python 102</title>
+    <title>Lab 7 - Python 102</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="UI.js"></script>
   </head>
 
-  <body data-lab-id="1">
+  <body data-lab-id="7">
     <a href="#content" tabindex="1" class="skip-to-content">
       Skip to content
     </a>
@@ -50,78 +50,19 @@
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 1</em>  If statement</h1>
-<h2>Goals</h2>
-<ul>
-	<li>To understand the anatomy of an if statement</li>
-	<li>Write your own simple if statement, and nested if statements</li>
-</ul>
-<h2>Simple if statement</h2>
-<p>Try to predict what this file will output</p>
-<h3 class="file-heading"><em>simple_if.py</em></h3>
-<pre class="file">a = 10
-b = 5
-
-if a &gt; b:
-  print("a is greater than b")
-elif a == b:
-  print("a is equal to b")
-else:
-  print("a is less than b")
-</pre>
+        <h1 class="lab_title"><em>lab 7</em>  Quiz 01</h1>
+<p>1. Start quiz</p>
 <h3><b>Execute:</b></h3>
-<pre class="instructions">python simple_if.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python simple_if.py</div>
-<p>a is greater than b<br />
-</pre></p>
-<h2>Nested if statement</h2>
-<p>Try to predict what this file will output</p>
-<h3 class="file-heading"><em>nested_if.py</em></h3>
-<pre class="file">a = 10
-b = 5
-
-if a &gt; b:
-  print("a is greater than b")
-  if a + b == 15:
-    print("a + b is 15")
-  else:
-    print("a + b is not 15")
-elif a == b:
-  print("a is equal to b")
-else:
-  print("a is less than b")
-</pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python nested_if.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python nested_if.py</div>
-<p>a is greater than b<br />
-a + b is 15<br />
-</pre></p>
-<h2>Coding Exercises</h2>
-<p>Remember to add, commit, and push the file to your own forked repo!</p>
-<p>1. Create a file called <code>lecture_01_lab_02_if_statements.py</code></p>
-<p>2.</p>
-<p>Customers are charged a basic highway entrance fee of $2.50 per trip</p>
-<p>There are 3 travel zones on the highway.</p>
-<ul>
-	<li>Zone 1: from km marker 0 to km marker 30</li>
-	<li>Zone 2: from km marker 31 to marker 60</li>
-	<li>Zone 3: from km marker 61 to marker 90</li>
-</ul>
-<p>Light vehicles are charged at a rate of 12 cents per km. Heavy vehicles are charged 15 cents per km.</p>
-<p>There is a 20% surcharge to travel in Zone 2.</p>
-<p>Code this up using if statements and variables.</p>
-<p>If marker is 31, and a heavy vehicle is used, expect to pay $8.08</p>
-<p>3. Add, commit, and push up code. (<span class="caps">REQUIRED</span>)</p>
+<pre class="instructions">cd ~/Development/polyglot/cohort-1/quizzes</pre>
+<pre class="instructions">jupyter notebook</pre>
+<p>2. Open up <code>quiz_01b_python102.ipynb</code> and begin</p>
         <nav class="foot-navigation">
+      <a href="lab_06.html">
+      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
+      Previous
+    </a>
   
-    <span></span>
-  
-      <a href="lab_02.html">
+      <a href="lab_08.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
       Next
     </a>
