--- a/lab_10.html
+++ b/lab_10.html
@@ -56,7 +56,7 @@
 <h2>Use inputs / prompts for your tweet analyzer</h2>
 <p>Within your tweet analyzer, refactor your code to use inputs / prompts. Your final solution should print out the sentiment of the tweet</p>
 <h2>Rock Paper Scissors</h2>
-<p>Create a rock paper scissors game with inputs. Read on the random module in python. https://www.pythonforbeginners.com/random/how-to-use-the-random-module-in-python to help you create a &#8220;computer&#8221;</p>
+<p>Create a rock paper scissors game with inputs. Read on the random module in python <a href="https://www.pythonforbeginners.com/random/how-to-use-the-random-module-in-python">here</a> to help you create a &#8220;computer&#8221;</p>
 <h3>Trivia Game</h3>
         <nav class="foot-navigation">
       <a href="lab_09.html">
