--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Python 102</title>
+    <title>Software Development</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -23,17 +23,17 @@
   </head>
 
   <body id="index_body" class="animation-fade-in">
-    <h1>Python 102</h1>
+    <h1>Software Development</h1>
 
-    <p><em>Python 102 introduces for loops, while loops, if statements and file I/O</em></p>
+    <p><em>Software Development introduces students to building web applications</em></p>
 
     <hr>
 
-    <a class="start" href="lab_01.html">Start Python 102</a>
+    <a class="start" href="lab_01.html">Start Software Development</a>
 
     <div class="footer">
       <p>
-        © Python 102
+        © Software Development
       </p>
       <p>️️❤️  Maintained with love by your Polyglot Instructors <a href="https://polyglotcoding.com/about-us" target="_blank" rel="noopener">Bea</a>.</p>
     </div>
