--- a/lab_01.html
+++ b/lab_01.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 1 - Python 102</title>
+    <title>Lab 1 - Software Development</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
-    <meta name="description" content="A guided tour that walks through file i/o, if statements, and for loops">
+    <meta name="description" content="A guided tour thatintroduces students to building web applications">
     <meta name="theme-color" content="#0000ff">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" media="screen" href="reset.css">
@@ -31,102 +31,41 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Python 102</span></a>
+          <a href="index.html"><span>Software Development</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">If statement</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">Iterating</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
-  <li id="lab_7_link"><a href="lab_07.html">Classes</a></li>
-  <li id="lab_8_link"><a href="lab_08.html">Quiz 01</a></li>
-  <li id="lab_9_link"><a href="lab_09.html">Homework Assignment 02</a></li>
-  <li id="lab_10_link"><a href="lab_10.html">Homework Assignment 03</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">Client-Server Model</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 1</em>  If statement</h1>
+        <h1 class="lab_title"><em>lab 1</em>  Client-Server Model</h1>
 <h2>Goals</h2>
 <ul>
-	<li>To understand the anatomy of an if statement</li>
-	<li>Write your own simple if statement, and nested if statements</li>
+	<li>To understand what the server-client model is</li>
+	<li>Write your first server in flask</li>
 </ul>
-<h2>Simple if statement</h2>
-<p>Try to predict what this file will output</p>
-<h3 class="file-heading"><em>simple_if.py</em></h3>
-<pre class="file">a = 10
-b = 5
-
-if a &gt; b:
-  print("a is greater than b")
-elif a == b:
-  print("a is equal to b")
-else:
-  print("a is less than b")
-</pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python simple_if.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python simple_if.py</div>
-<p>a is greater than b<br />
-</pre></p>
-<h2>Nested if statement</h2>
-<p>Try to predict what this file will output</p>
-<h3 class="file-heading"><em>nested_if.py</em></h3>
-<pre class="file">a = 10
-b = 5
-
-if a &gt; b:
-  print("a is greater than b")
-  if a + b == 15:
-    print("a + b is 15")
-  else:
-    print("a + b is not 15")
-elif a == b:
-  print("a is equal to b")
-else:
-  print("a is less than b")
-</pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python nested_if.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python nested_if.py</div>
-<p>a is greater than b<br />
-a + b is 15<br />
-</pre></p>
-<h2>Coding Exercises</h2>
-<p>Remember to add, commit, and push the file to your own forked repo!</p>
-<p>1. Create a file called <code>lecture_01_lab_02_if_statements.py</code></p>
-<p>2.</p>
-<p>Customers are charged a basic highway entrance fee of $2.50 per trip</p>
-<p>There are 3 travel zones on the highway.</p>
-<ul>
-	<li>Zone 1: from km marker 0 to km marker 30</li>
-	<li>Zone 2: from km marker 31 to marker 60</li>
-	<li>Zone 3: from km marker 61 to marker 90</li>
-</ul>
-<p>Light vehicles are charged at a rate of 12 cents per km. Heavy vehicles are charged 15 cents per km.</p>
-<p>There is a 20% surcharge to travel in Zone 2.</p>
-<p>Code this up using if statements and variables.</p>
-<p>If marker is 31, and a heavy vehicle is used, expect to pay $8.08</p>
-<p>3. Add, commit, and push up code. (<span class="caps">REQUIRED</span>)</p>
+<h2>What is a server?</h2>
+<p>It&#8217;s a computer than can handle requests.</p>
+<h2>What is a client?</h2>
+<p>It&#8217;s a computer that makes requests</p>
+<h2>So they&#8217;re both computers</h2>
+<p>Yes. A server can be a client and a client can be a server. Take your macbook for instance. Your macbook can be a server to itself, and we&#8217;ll see that soon!</p>
+<h2>What is the client-server model?</h2>
+<p><img src="./cgi_round_trip.jpg"></img></p>
+<p>Here we can see a client making a request for a website. The code for the website is located in a server somewhere in Menlo Park, California. The code runs, and we return some html and <span class="caps">CSS</span>.</p>
+<h2>Let&#8217;s write some code!</h2>
+<p>1. <a href="http://flask.pocoo.org/">http://flask.pocoo.org/</a></p>
         <nav class="foot-navigation">
   
     <span></span>
   
-      <a href="lab_02.html">
-      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
-      Next
-    </a>
+  
+    <span></span
   </nav>
 
       </div>
