--- a/lab_07.html
+++ b/lab_07.html
@@ -43,6 +43,7 @@
   <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
   <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
   <li id="lab_7_link"><a href="lab_07.html">Node</a></li>
+  <li id="lab_8_link"><a href="lab_08.html">React</a></li>
 
           </ol>
         </nav>
@@ -326,8 +327,10 @@ module.exports = {
       Previous
     </a>
   
-  
-    <span></span
+      <a href="lab_08.html">
+      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
+      Next
+    </a>
   </nav>
 
       </div>
