--- a/lab_08.html
+++ b/lab_08.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 8 - Python 102</title>
+    <title>Lab 8 - Software Development</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
-    <meta name="description" content="A guided tour that walks through file i/o, if statements, and for loops">
+    <meta name="description" content="A guided tour thatintroduces students to building web applications">
     <meta name="theme-color" content="#0000ff">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" media="screen" href="reset.css">
@@ -31,43 +31,66 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Python 102</span></a>
+          <a href="index.html"><span>Software Development</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">If statement</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">Iterating</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
-  <li id="lab_7_link"><a href="lab_07.html">Classes</a></li>
-  <li id="lab_8_link"><a href="lab_08.html">Quiz 01</a></li>
-  <li id="lab_9_link"><a href="lab_09.html">Homework Assignment 02</a></li>
-  <li id="lab_10_link"><a href="lab_10.html">Homework Assignment 03</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">Client-Server Model</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">API</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Node</a></li>
+  <li id="lab_8_link"><a href="lab_08.html">React</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 8</em>  Quiz 01</h1>
-<p>1. Start quiz</p>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">cd ~/Development/polyglot/cohort-1/quizzes</pre>
-<pre class="instructions">jupyter notebook</pre>
-<p>2. Open up <code>quiz_01b_python102.ipynb</code> and begin</p>
+        <h1 class="lab_title"><em>lab 8</em>  React</h1>
+<h2>What is react?</h2>
+<ul>
+	<li>React is a JavaScript library for building user interfaces. It lets you interact with the dom in a much more modular way than with jQuery</li>
+</ul>
+<h2>Set up repository</h2>
+<ul>
+	<li><code>git clone https://github.com/polyglotcoders/instagram_clone</code></li>
+	<li><code>cd instagram_clone</code></li>
+	<li><code>npm install</code></li>
+	<li><code>sequelize db:migrate</code></li>
+</ul>
+<h2>Views/index.ejs</h2>
+<p>You will notice that there is only one view in your entire app. This is because we attach all the new html to the <span class="caps">DOM</span> via React.</p>
+<p>Take a look at <code>views/index.ejs</code>. You&#8217;ll notice that there&#8217;s a pointer to the javascript at <code>dist/bundle.js</code>. This is where all your react code gets transpiled into regular javascript (not jsx).</p>
+<p><img src="./indexejs.png"/></p>
+<p>It will also try to locate where to attach all the html. In <code>app/index.jsx</code> you will notice that we attach it to the id with app which is located in our view.</p>
+<p><img src="./indexjs.png"/></p>
+<p>To transpile your code and create a build, run <code>webpack -d</code>. To keep it running constantly as you make changes run <code>npm run dev-react</code></p>
+<h2>Nodemon</h2>
+<p>To keep your server running at all times and not have to restart it, install nodemon.</p>
+<h2>Components</h2>
+<p>React is separated into components. This makes our code a lot cleaner. We can have components for everything! We can have a component for just a picture.</p>
+<h2>Coding Exercise</h2>
+<ul>
+	<li>Create a component for a picture and render a hardcoded image. Create a new react route for it!</li>
+</ul>
+<h2>Props</h2>
+<p>To pass in data between components, use props. You can pass props between components by adding a new attribute to the html. For example, let&#8217;s look at the parent component Event that wants to pass in a post.</p>
+<p><code>&lt;Post post={post}/&gt;</code> where post is a variable set earlier on</p>
+<p>And to use it from the Post component just do <code>this.props.post</code></p>
+<h2>Coding Exercise</h2>
+<p>Create a new Photo component. Pass the picture fetched from your server in the Feed component to a new photo component.</p>
         <nav class="foot-navigation">
       <a href="lab_07.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
       Previous
     </a>
   
-      <a href="lab_09.html">
-      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
-      Next
-    </a>
+  
+    <span></span
   </nav>
 
       </div>
